--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ section .title::after{
 }
 .navbar.sticky{
     padding: 15px 0;
-    background: crimson;
+    background: #4F77AA;
 }
 .navbar .max-width{
     display: flex;
